--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ charset-normalizer==3.4.4
 dataclasses-json==0.6.7
 distro==1.9.0
 docx2txt==0.9
+et_xmlfile==2.0.0
 faiss-cpu==1.13.1
 frozenlist==1.8.0
 greenlet==3.3.0
@@ -36,18 +37,24 @@ multidict==6.7.0
 mypy_extensions==1.1.0
 numpy==2.3.5
 openai==2.11.0
+openpyxl==3.1.5
 orjson==3.11.5
 ormsgpack==1.12.1
 packaging==25.0
+pandas==2.3.3
 propcache==0.4.1
 pydantic==2.12.5
 pydantic-settings==2.12.0
 pydantic_core==2.41.5
+pypdf==6.4.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
+pytz==2025.2
 PyYAML==6.0.3
 regex==2025.11.3
 requests==2.32.5
 requests-toolbelt==1.0.0
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.45
 tenacity==9.1.2
@@ -56,6 +63,7 @@ tqdm==4.67.1
 typing-inspect==0.9.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+tzdata==2025.3
 urllib3==2.6.2
 uuid_utils==0.12.0
 xxhash==3.6.0
